--- a/public/styles.css
+++ b/public/styles.css
@@ -159,6 +159,7 @@ form textarea {
 
 .todoform button {
   border: none;
+  margin-left: 10px;
   font-family: "Architects Daughter", cursive;
   text-decoration: none;
   padding: 2px 10px 3px 5px;
